--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ plotly==5.24.1
 fastapi==0.115.14
 uvicorn==0.33.0
 # or if you use Flask instead of FastAPI:
-# flask==3.0.3
+flask==3.0.3
 
 # MLflow for experiment tracking
 mlflow==2.17.2
